Tiny adjustements about box and calendars + fix wrapping calendars

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -30,9 +30,8 @@ div#home > section#presentation {
 }
 
 div#home > section#collaboration {
-  width: 49.5vw;
-  min-width:658px;
-  max-width:658px;
+  min-width:666px;
+  max-width:666px;
 }
 
 div#home > section#works {
